--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,39 @@ body {
     -webkit-transition: background 0.4s;
     -o-transition: background 0.4s;
     transition: background 0.4s;
+    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 1s; /* Firefox < 16 */
+        -ms-animation: fadein 1s; /* Internet Explorer */
+         -o-animation: fadein 1s; /* Opera < 12.1 */
+            animation: fadein 1s;
+}
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 p {
     margin: 10px 0;
@@ -393,8 +426,10 @@ input:checked + .slider:before {
     -o-transition: all 0.3s;
     transition: all 0.3s;
 }
+
+
 /* ========== ABOUT =========== */
-/* Create two equal columns that floats next to each other */
+/* Create two equal columns */
 .row {
     display: -webkit-box;
     display: -ms-flexbox;
