--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 @import url('https://fonts.googleapis.com/css?family=Kaushan+Script');
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
+
 /* ========== Variables ========== */
 /* Define dark and light palettes with CSS variables */
 /* Light Mode */
@@ -41,6 +42,7 @@
     /* Navigation colors */
     --navbar-primary: #18181b;
 }
+
 /* Reset */
 * {
     margin: 0;
@@ -177,6 +179,16 @@ nav {
     -webkit-transition: top 0.3s;
     -o-transition: top 0.3s;
     transition: top 0.3s; /* Transition effect when sliding down (and up) */
+}
+@media (prefers-color-scheme: light) {
+    nav {
+        background-color: #ffffff;
+    }
+}
+@media (prefers-color-scheme: dark) {
+    nav {
+        background-color: #18181b;
+    }
 }
 nav h1 {
     font-size: 2rem;
