--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,14 @@
 :root[color-mode="light"] {
     /* Accent colors */
     --primary-color: #5ec576;
+    --primary-color-darker: #4bbb7d;
     --gradient-primary: linear-gradient(to top left, #39b385, #9be15d);
     --gradient-primary-reverse: linear-gradient(to top left, #9be15d, #39b385);
     /* Text colors */
     --primary-text: #3f3f46;
     --secondary-text: #ffffff;
     /* Background colors */
-    --primary-background: #e4e4e7;
+    --primary-background: #f4f4f4;
     --secondary-background: #212224ff;
     /* Navigation colors */
     --navbar-primary: #ffffff;
@@ -211,7 +212,7 @@ nav ul li a {
     text-decoration: none;
     font-size: 1.1rem;
     font-weight: 500;
-    padding: 1rem 1.4rem 1rem 1rem;
+    padding: 1rem;
     width: 100%;
     color: inherit;
     -webkit-transition: all 0.3s;
@@ -291,7 +292,7 @@ input:checked + .slider:before {
 }
 /* ========== HERO ========== */
 .hero {
-    background-image: url("/img/hero_bg.png");
+    background-image: url(/img/hero_bg.png);
     height: 100vh;
     background-size: cover;
     -webkit-box-shadow: inset 0 0 0 100vmax rgba(94, 197, 118, 0.90);
@@ -396,6 +397,7 @@ input:checked + .slider:before {
 .highlight-logo {
     position: relative;
     z-index: -1;
+    margin: 0;
 }
 .highlight-logo::after {
     display: block;
@@ -808,7 +810,137 @@ input:checked + .slider:before {
    }
 }
 
-
+/* MODAL WINDOW */
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 600px;
+    max-height: 575px;
+    background-color: var(--primary-background);
+    padding: 3.125rem 3.75rem;
+    border-radius: 5px;
+    box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+    transition: all 0.5s;
+  }
+  
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(4px);
+    z-index: 100;
+    transition: all 0.5s;
+  }
+  
+  .modal__header {
+    font-size: 2.03125rem;
+    margin-bottom: 2.8125rem;
+    line-height: 1.5;
+  }
+  
+  .modal__form {
+    margin: 0rem;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+    gap: 1.5rem;
+  }
+  
+  .modal__form label {
+    font-size: 1.0625rem;
+    font-weight: 500;
+  }
+  
+  .modal__form input {
+    font-size: 1.0625rem;
+    font-family: 'Poppins', sans-serif;
+    padding: 0.625rem 0.9375rem;
+    border: 1px solid #ddd;
+    border-radius: 0.5rem;
+    max-width: 322px;
+    max-height: 48px;
+  }
+  
+  .modal__form textarea {
+    font-size: 1.0625rem;
+    font-family: 'Poppins', sans-serif;
+    padding: 0.625rem 0.9375rem;
+    border: 1px solid #ddd;
+    border-radius: 0.5rem;
+    max-width: 322px;
+  }
+  
+  .modal__form button {
+    grid-column: 1 / span 2;
+    justify-self: center;
+    margin-top: 1rem;
+  }
+  
+  .btn--close-modal {
+    font-family: inherit;
+    color: inherit;
+    position: absolute;
+    top: 0.5rem;
+    right: 2rem;
+    font-size: 2.5rem;
+    cursor: pointer;
+    border: none;
+    background: none;
+  }
+  
+  .hidden {
+    visibility: hidden;
+    opacity: 0;
+  }
+  
+  /* COOKIE MESSAGE */
+  .cookie-message {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    background-color: white;
+    color: #bbb;
+    font-size: 1.5rem;
+    font-weight: 400;
+  }
+  .btn {
+    display: inline-block;
+    background-color: var(--primary-color);
+    color: var(--primary-text);
+    font-size: 1rem;
+    font-family: inherit;
+    font-weight: 500;
+    border: none;
+    padding: 0.78125rem 2.8125rem;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+  
+  .btn:hover {
+    background-color: var(--primary-color-darker);
+  }
+  
+  .btn--text {
+    display: inline-block;
+    background: none;
+    font-size: 1.7rem;
+    font-family: inherit;
+    font-weight: 500;
+    color: var(--color-primary);
+    border: none;
+    border-bottom: 1px solid currentColor;
+    padding-bottom: 2px;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
 /* ========== RESPONSIVE SCREEN SIZES ========== */
 /* Mobile Devices */
 @media only screen and (min-width: 320px) and (max-width: 479px){
