--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,9 @@ body {
         -ms-animation: fadein 1s; /* Internet Explorer */
          -o-animation: fadein 1s; /* Opera < 12.1 */
             animation: fadein 1s;
+    --nav-height: 64px;
+
+    padding-top: var(--nav-height);
 }
 
 h1,
@@ -154,7 +157,7 @@ nav {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    height: 56px;
+    height: var(--nav-height);
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -171,10 +174,14 @@ nav {
     -webkit-transition: background 0.4s;
     -o-transition: background 0.4s;
     transition: background 0.4s;
-    -webkit-transition: top 0.3s;
-    -o-transition: top 0.3s;
-    transition: top 0.3s; /* Transition effect when sliding down (and up) */
+    -webkit-transition: transform 0.3s;
+    -o-transition: transform 0.3s;
+    transition: transform 0.3s; /* Transition effect when sliding down (and up) */
 }
+.nav--hidden {
+    transform: translateY(calc(-1 * var(--nav-height)));
+    box-shadow: none;
+  }
 nav h1 {
     font-size: 2rem;
 }
