--- a/css/style.css
+++ b/css/style.css
@@ -358,7 +358,7 @@ input:checked + .slider:before {
 }
 /* ========== HERO ========== */
 .hero {
-	background-image: url(/img/hero_bg.png);
+	background-image: url(img/hero_bg.png);
 	height: 100vh;
 	background-size: cover;
 	-webkit-box-shadow: inset 0 0 0 100vmax rgba(94, 197, 118, 0.90);
